<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleName"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/travel_icon"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/travel_icon" />

        <TextView
            android:id="@+id/selectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectCategory" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterValue" />

        <EditText
            android:id="@+id/etInputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterValue"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converted"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>